Fix name not centering bug on smaller screens, Update Software Development Student card.

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,8 @@ html {
 	text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgba(70, 70, 70, 0.284), 0 0 0.2em rgb(58, 33, 220);
 	color: #e8ebe5;
 	font-size: 3.5rem;
+	text-align: center;
+	width: 100vw;
 }
 
 .title-styles {
